--- a/index.html
+++ b/index.html
@@ -3,15 +3,48 @@
 <head>
   <title>Weather Report</title>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css">
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="weather.js"></script>
+
 </head>
 <body>
   <div class="container">
-    <h3><a href="#" class="btn btn-primary get-the-weather">Get the weather</a></h3>
-    <div class="weather-report"></div>
+    <h3><a href="#" class="btn btn-primary get-the-weather">Get current Chicago weather and three-day forecast!</a></h3>
+
+  <table class="table">
+    <tr>
+      <td class="current"></td>
+      <td class="weather-report"></td>
+      <td class="weather-icon"></td>
+    </tr>
+    <tr class="row2">
+      <td class ="td-date"></td>
+      <td class="td-report"></td>
+      <td class="td-icon"></td>
+    </tr>
+    <tr>
+      <td class ="tm-date"></td>
+      <td class="tm-report"></td>
+      <td class="tm-icon"></td>
+    </tr>
+    <tr>
+      <td class ="da-date"></td>
+      <td class="da-report"></td>
+      <td class="da-icon"></td>
+    </tr>
+    <tr>
+      <td class ="d3-date"></td>
+      <td class="d3-report"></td>
+      <td class="d3-icon"></td>
+    </tr>
+  </table>
+
   </div>
+
 </body>
 </html>
