--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <div class="container">
     <h3><a href="#" class="btn btn-primary get-the-weather">Get current Chicago weather and three-day forecast!</a></h3>
 
-  <table class="table">
+  <table class="table" style="width: auto">
     <tr>
       <td class="current"></td>
       <td class="weather-report"></td>
       <td class="weather-icon"></td>
     </tr>
-    <tr class="row2">
+    <tr>
       <td class ="td-date"></td>
       <td class="td-report"></td>
       <td class="td-icon"></td>
